<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.example.sendmessagebinding.data.Message" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".iu.ViewMessageActivity">


        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/etMarginLeft"
            android:layout_marginRight="@dimen/etMarginLeft"
            android:minHeight="@dimen/etMessageMinHeight"
            android:text="@string/tvUsuarioText"

            android:textSize="@dimen/tvTextSize"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvUserContent"
            android:layout_width="match_parent"
            android:text="@{message.user.name}"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/etMessageMinHeight"
            android:layout_marginLeft="@dimen/etMarginLeft"
            android:layout_marginRight="@dimen/etMarginLeft"
            android:textSize="@dimen/tvTextSize"

            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/etMarginLeft"
            android:layout_marginRight="@dimen/etMarginLeft"
            android:minHeight="@dimen/etMessageMinHeight"

            android:text="@string/tvInfoText"
            android:textSize="@dimen/tvTextSize"

            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/etMarginLeft"
            android:layout_marginRight="@dimen/etMarginLeft"
            android:minHeight="@dimen/etMessageMinHeight"

            android:text="@={message.content}"
            android:textSize="@dimen/tvTextSize"

            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imgMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/enviando"
            android:contentDescription="@string/imgMessage" />


    </LinearLayout>
</layout>
